# mengchong

./: .gitignore  .npmrc  COPYRIGHT.md  README.md  animations_manifest.json  chat.html  console.html  design-qa.md  desktop_pet_codex_spec.md  index.html  notification.html  package-lock.json  package.json  tsconfig.json  update.html  vite.config.ts  一键备份与发布.bat  一键安装开发环境.bat  启动桌宠.bat
docs/: final-project-check.md  windows-release-signing.md  发布与迭代指南.md
electron/: main.ts  preload.cts  tsconfig.json
electron/services/: ActivityClassifier.ts  (+13 more)
native/sensor/: Cargo.toml  README.md
native/sensor/compat/: PetSensorCompat.cs
native/sensor/src/: main.rs
prompts/: master_prompt.txt  negative_prompt.txt
scripts/: build-installer-assets.mjs  build-sensor.mjs  dev.mjs  process-sprites.py  publish-assistant.ps1  setup-dev-environment.ps1  smoke.mjs  validate-assets.ts  validate-prompts.ts
src/: drag-motion.ts  global.d.ts  main.ts  pet-overrides.css  styles.css  types.ts
tests/: accent-palette.spec.ts  activity-presence.spec.ts  activity-rules.spec.ts  agent-tools.spec.ts  ai-flow.spec.ts  categorize.spec.ts  chat-contract.spec.ts  console-contract.spec.ts  console-format.spec.ts  energy-saving.spec.ts  interaction.spec.ts  manifest.spec.ts  notification-contract.spec.ts  onboarding.spec.ts  pet-name.spec.ts  pet-presentation.spec.ts  plan-service.spec.ts  privacy.spec.ts  publish-assistant.spec.ts  reminder-scheduler.spec.ts  sensor.spec.ts  settings-recovery.spec.ts  state-machine.spec.ts  statistics.spec.ts  storage-migration.spec.ts  update-contract.spec.ts
(+50 files in other folders)
